加入子模組, 並更新 image 目錄

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Image test</h1>
-        <img src="img/1.gif"/><br>
-        <img src="img/2.gif"/><br>
-        <img src="img/3.gif"/><br>
+        <img src="image/1.gif"/><br>
+        <img src="image/2.gif"/><br>
+        <img src="image/3.gif"/><br>
     </body>
 </html>
